--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 spring.application.name=Product
 server.port=8300
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/product_db
-spring.datasource.username=lochan
-spring.datasource.password=Lochan1992
+spring.datasource.url=jdbc:mysql://347797620150.dkr.ecr.ap-south-1.amazonaws.com/product_ms:8000/productdb
+spring.datasource.username=admin
+spring.datasource.password=admin123
 spring.jpa.hibernate.ddl-auto=update
-eureka.client.service-url.defaultZone=http://localhost:2222/eureka
 
 buyerAPIURL=http://localhost:8100/api/buyer/isPrivilege/
